--- a/singolo1.css
+++ b/singolo1.css
@@ -15,8 +15,11 @@ body {
   padding: 34px 40px;
   display: flex;
   align-items: baseline;
-  justify-content: space-between;
   box-shadow: 0 5px 0 0 #323746;
+}
+
+.nav {
+  margin-left: auto;
 }
 
 .navlist {
@@ -27,7 +30,6 @@ body {
   text-transform: uppercase;
   padding: 0;
   margin: 0;
-  /* margin-left: auto; */
 }
 
 .navlist-item {
@@ -50,7 +52,83 @@ body {
 }
 
 .main {
+  margin-top: 5px;
+  background-color: #f2f2f2;
+  box-shadow: 0 5px 0 0 #ffffff;
+}
+
+.iphones {
   min-height: 599px;
   background-color: #f06c64;
-  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 5px;
+  box-shadow: 0 5px 0 0 #ea676b;
+}
+
+.main-container {
+  width: 940px;
+  margin-top: 65px;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 65px;
+}
+
+.main-container h1 {
+  padding: 0;
+  margin: 0;
+  font-size: 30px;
+  color: #666d89;
+  font-weight: 900;
+}
+
+.description {
+  font-size: 18px;
+  line-height: 30px;
+  color: #767e9e;
+  font-weight: 300;
+  text-align: left;
+  margin: 35px 0 50px 0;
+}
+
+.features {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.features-item {
+  width: 300px;
+  margin-right: 20px;
+  margin-bottom: 40px;
+  padding: 0;
+  display: flex;
+}
+
+.features-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.features-item_icon {
+  margin-right: 20px;
+}
+
+.features-item_head {
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  color: #666d89;
+  font-weight: 900;
+}
+
+.features-item_description {
+  font-size: 12px;
+  line-height: 22px;
+  color: #767e9e;
+  font-weight: 400;
+  text-align: justify;
+  margin: 18px 0 0 0;
 }
