fix: add situation handling when text is so long for name field in perconal card markup

--- a/singolo2.css
+++ b/singolo2.css
@@ -130,6 +130,10 @@ body {
   font-size: 18px;
   color: #666d89;
   font-weight: 900;
+  width: 302px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .about-us__personal-description {
