--- a/singolo.css
+++ b/singolo.css
@@ -126,7 +126,7 @@ body {
   line-height: 30px;
   color: #767e9e;
   font-weight: 300;
-  text-align: left;
+  text-align: justify;
   margin: 16px 0 45px 0;
 }
 
@@ -144,6 +144,7 @@ body {
   margin-bottom: 27px;
   padding: 0;
   display: flex;
+  text-align: justify;
 }
 
 .features-item:nth-child(3n) {
@@ -251,11 +252,13 @@ body {
 .about-us {
   background-color: #f2f2f2;
   padding: 60px 40px;
+  padding-bottom: 65px;
   border-bottom: 6px solid #ffffff;
 }
 
 .about-us__header {
   margin: 0 0;
+  margin-top: -3px;
   font-size: 30px;
   font-weight: 900;
   color: #666d89;
